[tool.poetry]
name = "hogwarts-apitest"
version = "0.1.0"
description = ""
authors = ["汤依莎 <tangyisha@koolearn.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
coveralls = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.source]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"